Fix AsteroidCard hover on mobile

--- a/web-development-2022/src/AsteroidCard/Card.module.css
+++ b/web-development-2022/src/AsteroidCard/Card.module.css
@@ -91,4 +91,8 @@
     .extendedCard {
         height: 100%;
     }
+
+    .card:hover{
+        transform: scale(1);
+    }
 }
